[lworld] C2 compilation fails with assert(!use_ReduceInitialCardMarks()) failed: can only happen with card marking

XMLWordPrintable

      # A fatal error has been detected by the Java Runtime Environment:
      #
      # Internal Error (/opt/mach5/mesos/work_dir/slaves/4728e7c1-7e67-490e-be0f-6bbf2a2f33db-S256/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/3649762d-8140-493f-ae94-135e7c973661/runs/09f091c2-8c34-431e-bf7f-699acea2bea6/workspace/open/src/hotspot/share/gc/g1/c2/g1BarrierSetC2.cpp:723), pid=15707, tid=15720
      # assert(!use_ReduceInitialCardMarks()) failed: can only happen with card marking

      Current CompileTask:
      C2: 43109 275 b compiler.valhalla.inlinetypes.TestOnStackReplacement::test3 (90 bytes)

      Stack: [0x00007f58a0051000,0x00007f58a0152000], sp=0x00007f58a014d4e0, free space=1009k
      Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
      V [libjvm.so+0xb1439c] G1BarrierSetC2::eliminate_gc_barrier(PhaseMacroExpand*, Node*) const+0x93c
      V [libjvm.so+0x126a57c] PhaseMacroExpand::process_users_of_allocation(CallNode*, bool)+0xd8c
      V [libjvm.so+0x12778c6] PhaseMacroExpand::eliminate_allocate_node(AllocateNode*) [clone .part.0]+0x506
      V [libjvm.so+0x1277f05] PhaseMacroExpand::eliminate_macro_nodes()+0x515
      V [libjvm.so+0x1278079] PhaseMacroExpand::expand_macro_nodes()+0x19
      V [libjvm.so+0x94843b] Compile::Optimize()+0x102b
      V [libjvm.so+0x949c81] Compile::Compile(ciEnv*, ciMethod*, int, bool, bool, bool, DirectiveSet*)+0x15d1
      V [libjvm.so+0x78284c] C2Compiler::compile_method(ciEnv*, ciMethod*, int, DirectiveSet*)+0x16c
      V [libjvm.so+0x9591b0] CompileBroker::invoke_compiler_on_method(CompileTask*)+0xd70
      V [libjvm.so+0x959f78] CompileBroker::compiler_thread_loop()+0x6c8
      V [libjvm.so+0x17bd02c] JavaThread::thread_main_inner()+0x21c
      V [libjvm.so+0x17c2e00] Thread::call_run()+0x100
      V [libjvm.so+0x14a0166] thread_native_entry(Thread*)+0x116

            Assignee:
            Tobias Hartmann
            Reporter:
            Tobias Hartmann
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: