8252299: [lworld] C2 compilation fails with assert(\!use_ReduceInitialCardMarks()) failed: can only happen with card marking